--- a/index.html
+++ b/index.html
@@ -1,18 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="utf-8">
-    <meta name="description" content="Your description goes here">
-    <meta name="keywords" content="one, two, three">
+	<head>
+    	<meta charset="utf-8">
+    	<meta name="description" content="This is where your description goes">
+    	<meta name="keywords" content="one, two, three">
 
-<title>Declutter Checklist</title>
+		<title>This week</title>
 
-<link rel="stylesheet" href="css/style.css">
-</head>
-<body>
-<h1>Declutter</h1>
-<ul>
-<li>candles</li>
-<li>books not for career</li>
-<li>pantry</li>
-</ul>
+		<!-- external CSS link -->
+		<link rel="stylesheet" href="css/normalize.css">
+		<link rel="stylesheet" href="css/style.css">
+	</head>
+	<body>
+		<label for="whatDay">What Day Is It?</label>
+		<input id="whatDay" type="text" name="" value="">
+		
+
+		<h1>Check</h1>
+
+		<p></p>
+
+		<script type="text/javascript" src="js/main.js"></script>
+	</body>
+</html>
